--- a/frondend/src/Components/Hero/Hero.module.css
+++ b/frondend/src/Components/Hero/Hero.module.css
@@ -26,7 +26,7 @@
   font-weight: 700;
 }
 
-.hero-hand-icon {
+/* .hero-hand-icon {
   display: flex;
   align-items: center;
   gap: 20px;
@@ -34,7 +34,7 @@
 
 .hero-hand-icon img {
   width: 105px;
-}
+} */
 
 .hero-latest-btn {
   display: flex;
