--- a/frondend/src/Components/NewCollections/NewCollections.module.css
+++ b/frondend/src/Components/NewCollections/NewCollections.module.css
@@ -1,26 +1,24 @@
-.popular {
+.new-collections {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
   height: 90vh;
 }
-
-.popular h1 {
+.new-collections h1 {
   color: #171717;
   font-size: 50px;
   font-weight: 600;
 }
-
-.popular hr {
+.new-collections hr {
   width: 200px;
-  padding: 2px;
   border-radius: 10px;
   background: #252525;
+  padding: 2px;
 }
-
-.popular-item {
+.collections {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   margin-top: 50px;
-  display: flex;
   gap: 30px;
 }
