--- a/frondend/src/Components/Navbar/Navbar.module.css
+++ b/frondend/src/Components/Navbar/Navbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   padding: 16px;
-  box-shadow: 0 1px 3px -2px black;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .nav-logo {
@@ -11,10 +11,11 @@
   gap: 10px;
 }
 
-.nav-logo p {
+.nav-logo a {
   color: #171717;
   font-size: 35px;
   font-weight: 600;
+  text-decoration: none;
 }
 
 .nav-menu {
@@ -36,7 +37,7 @@
   cursor: pointer;
 }
 
-a {
+li a {
   text-decoration: none;
   color: #808080;
 }
