--- a/frondend/src/Components/NewsLetter/NewsLetter.module.css
+++ b/frondend/src/Components/NewsLetter/NewsLetter.module.css
@@ -56,8 +56,13 @@
   font-size: 16px;
   font-family: Poppins;
   cursor: pointer;
+  transition: transform 0.1s ease-in-out;
 }
 
 .newsletter div button:hover {
   background: #3e596e;
+}
+
+.newsletter div button:active {
+  transform: scale(0.95);
 }
