--- a/frondend/src/Components/Offers/Offers.module.css
+++ b/frondend/src/Components/Offers/Offers.module.css
@@ -39,10 +39,15 @@
   font-family: 500;
   margin-top: 30px;
   cursor: pointer;
+  transition: transform 0.1s ease-in-out;
 }
 
 .offers-left button:hover {
   background: #3e596e;
+}
+
+.offers-left button:active {
+  transform: scale(0.95);
 }
 
 .offers-right {
