--- a/frondend/src/Components/ProductDisplay/ProductDisplay.module.css
+++ b/frondend/src/Components/ProductDisplay/ProductDisplay.module.css
@@ -102,10 +102,15 @@
   outline: none;
   border-radius: 80px;
   cursor: pointer;
+  transition: transform 0.1s ease-in-out;
 }
 
 .productdisplay-right button:hover {
   background: #3e596e;
+}
+
+.productdisplay-right button:active {
+  transform: scale(0.95);
 }
 
 .productdisplay-right-category {
